--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         </div>
         <h2 id="title">Electric chill machine</h2>
         <h3 id="artist">Bogdan</h3>
-        <audio src="music/jacinto-1.mp3"></audio>
+        <audio src="music/bog-1.mp3"></audio>
         <!-- Progress -->
         <div class="progress-container" id="progress-container">
-            <div class="progress" id="progress">
-                <div class="duration-wrapper">
-                    <span id="current-time">0:00</span>
-                    <div id="duration">2:06</div>
-                </div>
-            </div>    
+            <div class="progress" id="progress"></div>
+            <div class="duration-wrapper">
+                <span id="current-time"></span>
+                <span id="duration"></span>
+            </div>
+                
         </div>
         <div class="player-controls">
             <i class="fas fa-backward" id="prev" title="Previous"></i>
