--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             </div>
                 
         </div>
+        <div class="volume-container" id="volume-container">
+            <input type="range" min="1" max="100" value="50" id="slider">
+        </div>
+
         <div class="player-controls">
             <i class="fas fa-backward" id="prev" title="Previous"></i>
             <i class="fas fa-play main-button" id="play" title="Play"></i>
