--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 
         </div>
         <div class="volume-container" id="volume-container">
-            <input type="range" min="1" max="100" value="50" id="slider">
+            <input type="range" min="0" max="100" value="50" id="volume-range">
         </div>
 
         <div class="player-controls">
